--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="navbar_css.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
-    <div class="center-box">
+    <!-- <div class="center-box"> 
         <div class="center-item"></div>
-    </div>
+    </div> -->
     <div>
         <img src="dojo-icon.png" alt="dojo-icon">
         <h1>Coding Dojo</h1>
